--- a/config.gradle
+++ b/config.gradle
@@ -34,10 +34,14 @@ ext {
             "support_annotations": 'com.android.support:support-annotations:28.0.0',
             "constraint_layout"  : 'com.android.support.constraint:constraint-layout:1.1.3',
 
+            //列表控件
+            "recyclerview"       : 'com.android.support:recyclerview-v7:25.3.1',
             //阿里路由依赖 https://github.com/alibaba/ARouter
             "arouter_api"        : 'com.alibaba:arouter-api:1.5.0',
             "arouter_compiler"   : 'com.alibaba:arouter-compiler:1.2.2',
 
+            //请求时动态权限库 https://github.com/yanzhenjie/AndPermission
+            "permission"         : 'com.yanzhenjie.permission:support:2.0.1',
             "gson"               : 'com.google.code.gson:gson:2.6.2',
             "eventbus"           : 'org.greenrobot:eventbus:3.0.0',
             "butterknife"        : 'com.jakewharton:butterknife:7.0.1',
