--- a/mustlibrary/build.gradle
+++ b/mustlibrary/build.gradle
@@ -27,12 +27,11 @@ dependencies {
     api rootProject.ext.dependencies.support_appcompatv7
     androidTestImplementation rootProject.ext.dependencies.support_annotations
     api rootProject.ext.dependencies.constraint_layout
+    api rootProject.ext.dependencies.recyclerview
+    //动态权限 https://github.com/yanzhenjie/AndPermission
+    api rootProject.ext.dependencies.permission
+    //
+    api 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-//    implementation 'com.android.support:appcompat-v7:28.0.0'
-//    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
-//    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
